<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LifeStream</string>
    <string name="fail_ticker">LifeStream encountered a problem&#8230;</string>
    <string name="fail_title">Error</string>
    <string name="fail_cannot_create">Failed to create thumbnail path</string>
    <string name="fail_exists">Thumbnail path already exists but is not a directory</string>
    <string name="fail_copy">Failed to thumbnail photo</string>
    <string name="fail_not_mounted">External storage isn\'t ready</string>
    <string name="fail_upload">The upload to the server failed.</string>
    <string name="fail_download">Could not download new images</string>
    <string name="config_username">Username</string>
    <string name="config_password">Password</string>
    <string name="config_login">Login</string>
    <string name="config_currentlogin">Currently logged in as</string>
    <string name="config_loggedin">You are currently logged in.</string>
    <string name="config_loggingin">Logging in&#8230;</string>
    <string name="config_loggedin_as">Logged in as %1$s</string>
    <string name="config_badlogin">Login failed.</string>
    <string name="upload_ticker">LifeStream uploaded&#8230;</string>
    <string name="upload_title">Uploaded Image(s)</string>
    <string name="upload_detail">Keep calm and carry bytes.</string>
    <string name="download_ticker">New LifeStream downloads!</string>
    <string name="download_title">Download(s) Available</string>
    <string name="download_detail">Santa came early.</string>
    <string name="config_enabled">Enable LifeStream</string>
    <string name="config_verbose">Enable verbose error notifications</string>
    <string name="config_upload_notifications">Enable upload notifications</string>
    <string name="config_vibration">Enable vibration</string>
    <string name="config_sounds">Enable notification sound</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_path_config">Configure Paths</string>
    <string name="path_info">Paths are relative to the SD card.</string>
    <string name="path_heading_path">Path (assume /sdcard/ on the front)</string>
    <string name="path_heading_wildcard">Image wildcard</string>
    <string name="path_heading_include">Include wildcard (files that go with images)</string>
    <string name="path_edit_title">Edit Watched Path</string>
    <string name="plus">+</string>
    <string name="left">&lt;</string>
    <string name="paths_edit_title">Edit Watched Paths</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="path_choose">Choose&#8230;</string>
    <string name="config_edit_paths">Edit Watched Paths&#8230;</string>
    <string name="fail_image_load">Unable to load image \'%1$s\'</string>
    <string name="config_hq_image">High quality image scale</string>
    <string name="config_image_size">Max image size:</string>
</resources>
